# zfs-stats

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  README.md  ZFS_DATA_STRUCTURE.md  dev-test.sh  eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs  types.rs
src/: App.vue  bindings.ts  main.rs  main.ts  types.rs
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/common/: ThemeToggle.vue
src/components/terminal/: TerminalDisplay.vue
src/components/zfs/: PoolDetails.vue  ZfsDashboard.vue
src/components/zfs/charts/: DatasetUsageBar.vue  SpaceOverview.vue
src/constants/: themes.ts
src/lib/: api.ts
src/stores/: terminalStore.ts  zfsStore.ts
