[package]
name = "zfs-stats-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
tower-http = { version = "0.5", features = ["trace"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde", "serde_json"] }
specta-typescript = "0.0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

