[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["config-json5", "specta"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-os = "2"
specta = { version = "=2.0.0-rc.22", features = ["serde", "serde_json", "derive"] }
specta-typescript = { version = "0.0.9" }
tauri-specta = { git = "https://github.com/specta-rs/tauri-specta", rev = "6fe9532", features = ["typescript", "derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
